--- a/README
+++ b/README
@@ -2,7 +2,6 @@ Social Hierarchical Learning
 (c) 2011 Professor Brian Scassellati, Bradley Hayes, Thaddeus Diamond
 Yale University
 
-
 About This Project
 ==================
 This project seeks to implement a new way for real robotic systems to learn
@@ -27,34 +26,7 @@ Prerequisites
   
 Installation
 ============
-In order to compile the external libraries associated with the project, please
-run:
-    $ ./install-ext
-
-To compile the source, please run:
-    $ make -C src
-
-Three directories will be created: bin/, obj/ and logs/.
-
-// TODO(Thad or Brad): Tell how to run each individual program once the programs
-// are able to be executed.
-
-
-Kinect
-======
-This project includes an external Kinect project that captures all data from the
-Kinect running on a Windows 7+ device and transfers it on a wire to the core
-processing unit, which can utilize the extra data to improve the learning
-process. The only dependency for that project is the Microsoft Research Beta
-SDK for Kinect.
-
-The project makes the assumption that the Research SDK is installed to:
-  C:\Program Files (x86)\Microsoft Research KinectSDK
-
-To build the executable, open "ext/Kinect/KinectInterp.sln" in Visual C++
-(2010 or greater, any edition).  Click "Build Project", then "Start Debugging".
-An executable will appear in the "Release" subdirectory of the Kinect project
-root.
+See "INSTALL"
 
 
 Documentation
