--- a/papers/AAAI/report.tex
+++ b/papers/AAAI/report.tex
@@ -25,17 +25,18 @@ New Haven, Connecticut 06511\\
 
 \begin{abstract}
 Several variations of Q-Learning have reliably demonstrated that reinforcement
-learning is a viable technique for creating learned skills in robots.  However,
+learning is a viable technique for learning skills in robotic systems.  However,
 very little work has focused on using sensory data to generate an approximation
 of which Q-Table most reliably approximates the skill just observed.  We present
 herein a system which is able to consistently provide accurate decompositions of
-a scene into simple, learned primitives.  The system is then able to take this
+a scene into simple, learned primitives by using what we are terming
+\textit{Inverse Q-Learning}.  The system is then able to take this
 frame-by-frame decomposition to provide an approximation for a suitable 
-hierarchical structure of the task being performed.  This structure is composed
+hierarchical structure of the task being observed.  This structure is composed
 entirely of either previously learned primitives or unknowns.  Once those
 learned actions have been successfully mapped over time, the entire scene, or
-merely portions of it, can be replicated by robotic agents in a novel
-environment.  
+merely portions of it, can be replicated by robotic agents in a mixed
+human-robot environment.  
 \end{abstract}
 
 \section{Introduction}
