--- a/papers/AAAI/report.bib
+++ b/papers/AAAI/report.bib
@@ -1,3 +1,6 @@
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+The following citations are used in the introduction
+
 @article{LFDSurvey,
   title = "A survey of robot learning from demonstration",
   journal = "Robotics and Autonomous Systems",
@@ -15,16 +18,6 @@
   year={2008}, 
   month={may}, 
   pages={3315 -3320},
-}
-
-@INPROCEEDINGS{POMDPGesture, 
-  author={Darrell, T. and Pentland, A.}, 
-  booktitle={Pattern Recognition, 1996., Proceedings of the 13th International Conference on}, 
-  title={Active gesture recognition using partially observable Markov decision processes}, 
-  year={1996}, 
-  month={aug}, 
-  volume={3},
-  pages={984 -988 vol.3}
 }
 
 @inproceedings{InverseRL,
@@ -82,4 +75,78 @@
  year = {2006},
  pages = {1000--1005},
  publisher = {AAAI Press},
-} 
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+The following citations are used in the background section on ASL
+
+@INPROCEEDINGS{HandGestures,
+    author = {William T. Freeman and William T. Freeman and Michal Roth and Michal Roth},
+    title = {Orientation Histograms for Hand Gesture Recognition},
+    booktitle = {In International Workshop on Automatic Face and Gesture Recognition},
+    year = {1994},
+    pages = {296--301}
+}
+
+@INPROCEEDINGS{HSMMRecognition, 
+  author={Natarajan, P. and Nevatia, R.}, 
+  booktitle={Motion and Video Computing, 2007. WMVC '07. IEEE Workshop on}, 
+  title={Coupled Hidden Semi Markov Models for Activity Recognition}, 
+  year={2007}, 
+  month={feb. }, 
+  pages={10}
+}
+
+@INPROCEEDINGS{POMDPGesture, 
+  author={Darrell, T. and Pentland, A.}, 
+  booktitle={Pattern Recognition, 1996., Proceedings of the 13th International Conference on}, 
+  title={Active gesture recognition using partially observable Markov decision processes}, 
+  year={1996}, 
+  month={aug}, 
+  volume={3},
+  pages={984 -988 vol.3}
+}
+
+@article{HoughASL,
+  title={American sign language (ASL) recognition based on Hough transform and neural networks},
+  volume={32},
+  number={1},
+  journal={Expert Systems with Applications},
+  publisher={Elsevier Ltd},
+  author={Munib, Q and Habeeb, M and Takruri, B and Almalik, H},
+  year={2007},
+  pages={24--37}
+}
+
+@INPROCEEDINGS{ASLRealTime, 
+  author={Rung-Huei Liang and Ming Ouhyoung}, 
+  booktitle={Automatic Face and Gesture Recognition, 1998. Proceedings. Third IEEE International Conference on}, 
+  title={A real-time continuous gesture recognition system for sign language }, 
+  year={1998}, 
+  month={apr}, 
+  pages={558 -567}
+}
+
+@article{MotionASL,
+  title = "Image processing system for interpreting motion in American Sign Language",
+  journal = "Journal of Biomedical Engineering",
+  volume = "14",
+  number = "5",
+  pages = "419 - 425",
+  year = "1992",
+  author = "C. Charayaphan and A.E. Marble",
+}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+The following citations are used in the background section on Hierarchy
+
+@inproceedings{Hierarchical,
+ author = {Digney, Bruce L.},
+ title = {Learning hierarchical control structures for multiple tasks and changing environments},
+ booktitle = {Proceedings of the fifth international conference on simulation of adaptive behavior on From animals to animats 5},
+ year = {1998},
+ pages = {321--330},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+}
