Checking in the latest version of the paper name with author ordering, a fuller set of data to be used in training/testing, and updates to the data collector and unit test to account for the new data directory structure and fix lint errors.

--- a/papers/AAAI/report.tex
+++ b/papers/AAAI/report.tex
@@ -8,14 +8,14 @@
 \frenchspacing
 \pdfoutput=1
 \pdfinfo{
-/Title (Primitive Recognition using Inverse Q-Table Matching)
+/Title (Using a Hierarchical Architecture for Collaborative Social Tasks to Reinforce and Recognize Action Primitives)
 /Subject (In Proceedings AAAI)
-/Author (Bradley Hayes, Brian Scassellati, and Thaddeus Diamond)
+/Author (Bradley Hayes, Thaddeus Diamond, and Brian Scassellati)
 }
   
 \begin{document}
-\title{Scene Decomposition using Inverse Q-Table Matching}
-\author{Bradley Hayes, Brian Scassellati, and Thaddeus Diamond\\
+\title{Using a Hierarchical Architecture for Collaborative Social Tasks to Reinforce and Recognize Action Primitives}
+\author{Bradley Hayes, Thaddeus Diamond, and Brian Scassellati\\
 Yale University\\
 Arthur K. Watson Hall\\
 51 Prospect St\\
