Added a ton of text to the paper, updated bibtex file with new refs.

--- a/papers/AAAI/report.bib
+++ b/papers/AAAI/report.bib
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-The following citations are used in the introduction
+%The following citations are used in the introduction
 
 @article{LFDSurvey,
   title = "A survey of robot learning from demonstration",
@@ -10,6 +10,127 @@ The following citations are used in the introduction
   year = "2009",
   author = "Brenna D. Argall and Sonia Chernova and Manuela Veloso and Brett Browning"
 }
+
+@inproceedings{AutoSkillAcquisition,
+  author = {Konidaris, George and Kuindersma, Scott and Grupen, Roderic A. and Barto, Andrew G.},
+  editor = {Burgard, Wolfram and Roth, Dan},
+  booktitle = {AAAI},
+  interhash = {7bd4c3cfeb71392807d95747fa0f3009},
+  intrahash = {48b17512c7465af06d6231a79f773bea},
+  publisher = {AAAI Press},
+  title = {Autonomous Skill Acquisition on a Mobile Manipulator.},
+  url = {http://dblp.uni-trier.de/db/conf/aaai/aaai2011.html#KonidarisKGB11},
+  year = 2011,
+  timestamp = {2011-08-09T00:00:00.000+0200},
+  keywords = {dblp},
+  ee = {http://www.aaai.org/ocs/index.php/AAAI/AAAI11/paper/view/3724},
+  added-at = {2011-08-09T00:00:00.000+0200},
+  biburl = {http://www.bibsonomy.org/bibtex/248b17512c7465af06d6231a79f773bea/dblp}
+}
+
+@ARTICLE{RLAdvances,
+    author = {Barto, A. and Mahadevan, S.},
+    title = {Recent advances in hierarchical reinforcement learning},
+    journal = {Discrete Event Systems},
+    year = {2003},
+    volume = {13},
+    pages = {41-77}
+}
+
+@INPROCEEDINGS{EfficientSkillLearning,
+    author={Konidaris, G. and Barto, A.},
+    title = {Efficient skill learning using abstraction selection},
+    booktitle = {In Proceedings of the 21st International Joint Conference on Artificial Intelligence},
+    year = {2009}
+}
+
+@INPROCEEDINGS{AutoHierarchyLearning,
+    author = {Mugan, J. and Kuipers, B.},
+    title = {Autonomously learning an action hierarchy using a learned qualitative state representation},
+    booktitle = {In Proceedings of the 21st International Joint Conference on Artificial Intelligence},
+    year = {2009}
+}
+
+@inbook{LearningHierarchicalControl, 
+	title={Learning Hierarchical Control Structures for Multiple Tasks and Changing Environments}, 
+	url={http://portal.acm.org/citation.cfm?id=299998}, 
+	booktitle={Control}, 
+	publisher={MIT Press}, 
+	author={Digney, B.}, 
+	year={1998}, 
+	pages={321--330}
+}
+
+@article{LearningBehaviorFusion,
+  author = {Nicolescu, M.N and Jenkins, O.C. and Olenderski, A. and Fritzinger, E.},
+  title = {Learning Behavior Fusion from Demonstration},
+  journal = {Interaction Studies},
+  category = {journal},
+  month = {Jun},
+  year = {2008},
+  pages = {319-352},
+  volume = {9},
+  number = {2},
+  url = {http://www.cse.unr.edu/~monica/Research/Publications/is2008.pdf}
+}
+
+@article{SuttonMDP, 
+	title={Between MDPs and Semi-MDPs: A Framework for Temporal Abstraction in Reinforcement Learning},
+	volume={112}, 
+	journal={Artificial Intelligence}, 
+	author={Sutton, R.S. and Precup, D. and Singh, S.}, 
+	year={1999}, 
+	pages={181--211}
+}
+
+@article{QLBehaviorSelection, 
+	title={Robot Behavioral Selection using Qlearning}, 
+	volume={1},
+	url={citeseer.ist.psu.edu/587993.html}, 
+	number={October}, 
+	journal={IEEERSJ International Conference on Intelligent Robots and System}, 
+	publisher={Ieee}, 
+	author={Martinson, E. and Stoytchev, A. and Arkin, R}, 
+	year={2002}, 
+	pages={970--977}
+}
+
+@ARTICLE{KaelblingRLSurvey,
+    author = {Kaelbling, L.P. and Littman, M.L. and Moore, A.W.},
+    title = {Reinforcement learning: a survey},
+    journal = {Journal of Artificial Intelligence Research},
+    year = {1996},
+    volume = {4},
+    pages = {237--285}
+}
+
+@phdthesis{QLearningWatkins, 
+	title={Learning from delayed rewards}, 
+	school={Kings College}, 
+	author={Watkins, C.}, 
+	year={1989}
+}
+
+@article{PerspectiveTaking,
+  author = {Breazeal, Cynthia and Berlin, Matt and Brooks, Andrew G. and Gray, Jesse and Thomaz, Andrea Lockerd},
+  interhash = {2f7036c90759b9a9d6d9329e803b8879},
+  intrahash = {2783940c8455020c755a2776416cc2c2},
+  journal = {Robotics and Autonomous Systems},
+  number = 5,
+  pages = {385-393},
+  title = {Using perspective taking to learn from ambiguous demonstrations.},
+  url = {http://dblp.uni-trier.de/db/journals/ras/ras54.html#BreazealBBGT06},
+  volume = 54,
+  year = 2006,
+  timestamp = {2008-12-12T00:00:00.000+0100},
+  keywords = {dblp},
+  ee = {http://dx.doi.org/10.1016/j.robot.2006.02.004},
+  added-at = {2008-12-12T00:00:00.000+0100},
+  description = {dblp},
+  biburl = {http://www.bibsonomy.org/bibtex/22783940c8455020c755a2776416cc2c2/dblp},
+  date = {2008-12-12}
+}
+
 
 @INPROCEEDINGS{JenkinsLFD, 
   author={Grollman, D.H. and Jenkins, O.C.}, 
