--- a/papers/AAAI/report.tex
+++ b/papers/AAAI/report.tex
@@ -1,7 +1,7 @@
 % File: report.tex
 
 \documentclass[letterpaper]{article}
-\usepackage{aaai}
+\usepackage{styles/aaai}
 \usepackage{times}
 \usepackage{helvet}
 \usepackage{courier}
@@ -47,89 +47,66 @@ task into primitive actions.
 
 \section{Introduction}
 \label{sec:intro}
-1. Talk about the need for cooperative robotics here.
+% 1. Talk about the need for cooperative robotics here.
+As research in recent years has demonstrated, effective co-robots need to be flexible agents, adapting to the changing needs of their daily operations. The introduction of such systems requires a substantial effort not merely aimed at producing capable and robust robots, but also a careful and planned interaction methodology allowing non-expert human operators to contribute to the robot's training with a non-invasive, intuitive procedure. With this in mind, it is greatly important that a co-robot not only achieve competency through direct skill training, but also that it utilize observations of others in its everyday behaviors to reinforce and improve existing abilities. Other works have solved many of the challenges standing in the way of collaborative robotics, including automating option scaffolding through demonstration \cite{AutoSkillAcquisition}, acquiring skills utilizing human reward signals in place of \cite{TAMER} or in addition to \cite{TeacherRL} a traditional objective function, and correcting for critical omissions in non-expert demonstrations \cite{PerspectiveTaking}. Simplifying the human trainer/robot student interaction paradigm by shaping human guidance into usable forms is also rapidly advancing \cite{TAMER,Clicker,AdviceTaking,TeacherRL,DemonstrationRL}. These successful results strongly contribute to the widespread use of Q-Learning variants in real robotic systems. With consideration for the ubiquity of this technique, we present a compatible method for utilizing a generic hierarchical skill architecture to achieve improvement in SMDP-based skill execution while simultaneously providing the ability to recognize known skills when being performed by other agents. This is demonstrated by utilizing the observation and subsequent automated identification of selected American Sign Language gestures to improve an agent's understanding of the underlying primitive skills.
 
-2. Talk about Q-Learning applied to robotics and skill acquisition here.
-
-3. Talk about recent works that reduce the number of trials required to learn a skill.
-
-4. Talk about recent works that remove the need for hand-coded objective functions to gain to new skills here.
-
-5. Talk about high level contribution to solving this problem.
-
-Empirical data has consistently proven that reinforcement learning can be used
-as a viable method to learn primitive skills in a real robotic systems.
-Standard Q-Learning techniques which traditionally take several hundred or
-several thousand trials to converge on a learned skill have been supplanted
-by techniques yielding convergent results within some small margin of error,
-which require orders of magnitude fewer trials.   Although there are too many
-to enumerate here, some of the techniques include the use of simple external
-feedback such as "good" and "bad" indicators \cite{TAMER} or an animal
-clicker \cite{Clicker}, the use of intermittent human
-guidance \cite{AdviceTaking,TeacherRL}, and the integration of human
-demonstration \cite{DemonstrationRL}.  These results
-have made compelling the use of modified Q-Learning in real robotic systems.
-
-Very little work has focused on using data gathered during the Q-Learning
-process to later decompose a complex scene into a set of primitives via
-observation.  The concept of "inverse reinforcement learning" is not entirely
-novel, as Abbeel and Ng \cite{InverseRL} used inverse reinforcement learning
-to generate reasonable approximations for the reward function underlying an
-observed primitive.  However, their work does not leverage existing data
-to create approximate classifications, but rather uses raw sensory data to
-attempt to recover the unknown reward function.
-
-We present herein a system that, using Q-Tables generated from simple
-Q-Learning in a real robotic system, uses observation to 
-It is important to separate the context of our contribution from that of
-existing research in \textit{learning from demonstration} (LfD).  Standard
-techniques in reinforcement learning have focused on using examples to
-transfer a policy representing some basic skill from a teacher to a
-pupil \cite{JenkinsLFD,LFDSurvey}.  We focus on the use of
-\textit{existing knowledge} to generate an approximate decomposition of
-complex scene data.
-
-\section{Background}
+\section{Background and Related Work}
 \label{sec:background}
-\subsection{Hierarchical Skill Architecture}
-\cite{Hierarchical}
-1. Talk about the need for hierarchical representation when multiple skills are required
-2. Multiple skills makes the agent more adaptable and useful
-3. Talk about decomposing skill sequences into Task plans
-4. Talk about scaffolding within learning context
-5. Accounting for multiple skills complicates the learning and execution problem
+\subsection{Q-Learning in Robotics}
+% 2. Talk about Q-Learning applied to robotics and skill acquisition here.
+Markov Decision Processes provide a convenient and efficient mechanism to create flexible, arbitrarily complex options: closed-loop policies describing action sequences \cite{SuttonMDP}. The temporal abstraction and generality of representation make this a favorable method of internally representing knowledge about actionable skills. When designing for a non-expert audience, it is often favorable to trade complexity (and on occasion optimal resource allocation) for simplicity. This accessibility contributes to Q-Learning being one of the most widely utilized reinforcement learning methods within robotics \cite{QLearningWatkins}. Utilizing an environmental reward function, solving for an optimal action policy can often be accomplished autonomously and is only limited by the complexity of the state representation.
+
+% 3. Talk about recent works that reduce the number of trials required to learn a skill.
+Due to the exploration space of the generic QLearning problem scaling exponentially with dimensionality, heuristics are actively being researched that reduce the amount of trials required to achieve desirable policies. One example heuristic includes utilizing human feedback as both an immediate and anticipatory reward signal, leveraging human foresight to effectively reduce the search depth required to learn acceptable paths through state space \cite{TAMER}. Another effective heuristic involves leveraging data obtained through observing demonstrations of skills to favorably influence transition probabilities within the MDP, achieving accelerated convergence to an acceptable policy \cite{LFDSurvey}. Works like these reduce the amount of trials required by several orders of magnitude with minimal sacrifice in resulting skill quality.
+
+% 4. Talk about high level contribution to solving this problem.
+For a co-robot to interact as a productive member of a team, it must be able to recognize and correctly classify peer behaviors. This situational awareness is instrumental in achieving intelligent cooperation, of the same or greater importance as being capable of executing actions independently. To achieve this on a practical level, it is necessary to intelligently group sets of primitive actions together into complex options. 
+
+
+\subsection{Hierarchical Skill Architectures}
+% 1. Talk about the need for hierarchical representation when multiple skills are required
+Within the context of robotics, two focuses of reinforcement learning research that are particularly relevant to co-robot advancement are autonomously building options hierarchies and reducing the trials or information required to achieve new proficiencies. The former heavily overlaps with non- robot-centric reinforcement learning work, which aims to make high-dimensional, continuous domain problem spaces tractable. General solutions are difficult to formulate, due to the vastness of potential methods and goals for such a system. Hierarchical learning systems follow the philosophy that these highly complex problems can very likely be broken into a number of simpler, tractable problems. Discovering the most efficient way to discover and arrange the low-level primitive actions is an open problem, with a multitude of viable approaches\cite{EfficientSkillLearning,AutoHierarchyLearning,LearningHierarchicalControl}.
+
+% 2. Multiple skills makes the agent more adaptable and useful
+Konidaris, et. al. have successfully shown that the latter can be influenced through the former, exploiting hierarchical learning to enable skill transfer between environments \cite{AutoSkillAcquisition}. By extending the usefulness of a skill laboriously acquired through trial and error, the actual cost versus utility of the learned action is reduced substantially. Achieving a general solution for attaining the cognitive capability to recognize instances where already-known actions can be transferred and applied would constitute a significant advance for collaborative robotics. This is emphasized through the ever-increasing incorporation of demonstration-as-training-signal that is becoming more prevalent as the computational costs for doing so diminish. As this incorporation continues, barriers to dynamic, adapatable multi-agent, multi-human collaboration will be removed. 
+	
+% 3. Talk about decomposing skill sequences into Task plans
+A hierarchical skill architecture can be used to great effect when assisting in collaborative task execution. To maximally benefit the collaborative aspects of complex task execution, it is essential for all agents involved to have reasonable approximations of the intent and plan of each other peer worker. With humans being naturally receptive of skill scaffolding, expressing a complicated task in terms of actions, sub-actions, and temporal sequencing, the intentions of each agent can be effectively communicated in a common format. One of the greatest technical challenges faced when orchestrating a collaborative exercise between multiple agents including both humans and robots is the mutual recognition of intention and action. Were there a method by which a participant or external observer could automate this process, a significant hurdle to this capability would be cleared.
+ 
+% 5. Accounting for multiple skills complicates the learning and execution problem
+Work by Martinson, et. al. has shown the benefits conferred to an agent utilizing combinations of pre-tested behavioral assemblages to successfully accomplish a complex goal in a dynamic environment outside the agent's control \cite{QLBehaviorSelection}. The paper associates a list of sensor states, referenced as perceptual triggers, with constructed sets of pre-trained actions with stable policies. This decision serves to reduce the MDP search space when considering potential skills to apply, while enhancing the insight human operators have into the agent's potential actions by providing an intuitive mechanism by which action/reaction pairs can be specified. Mugan and Kuipers approached this problem similarly to Konidaris, in that they look to autonomously abstract portable options that can be transferred between environments from their agent's experiences. Particularly of note, the QLAP algorithm operates through qualitative representations of the continuous world. This results in providing a tolerance for incomplete input information while disregarding irrelevant dimensions of the state space. As such, QLAP learns action hierarchies while maintaining both temporal and state abstraction \cite{AutoHierarchyLearning}. From a practical standpoint, maintaining state abstraction is crucial for maintaining usable performance levels as most real-world examples cannot be directly approached due to intractably large state space.
 
 
 \subsection{Skill Recognition}
-1. Talk about LBD as an accessible means for non-experts to train robots on skills.
-
+1. Talk about LBD as an accessible means for non-experts to train robots on skills.\\
+\\
 2. Introduce concept of learning skills through traditional robot QLearner system, talk about
-    result: qtable and policy indicating possible executions of skill.
-
-3. Introduce idea that this information can also be leveraged to identify others' execution of these skills
-
-5. Generalize result beyond gesture recognition to other motor tasks, cite konidaris' work
-
+   result: qtable and policy indicating possible executions of skill.\\
+\\
+3. Introduce idea that this information can also be leveraged to identify others' execution of these skills\\
+\\
+5. Generalize result beyond gesture recognition to other motor tasks, cite konidaris' work\\
+\\
 6. Present work as an enhancement layer for konidaris' CST work, generalizing it to automatically work for
-   multiple skills, properly applying training data.
-
+ multiple skills, properly applying training data.\\
+\\
 7. Present ASL recognition as an example of a complex skill set to identify, as inconsistency and noise
-   are more likely prevalent with human repetitions of actions than precise robotic replay.
+   are more likely prevalent with human repetitions of actions than precise robotic replay.\\
+\\
 
+We chose to test our system on properly identifying and segmenting video of American Sign Language (ASL) gestures.
+American sign language provides a practical use case while testing the algorithm's tolerance to variance in training, as each training 
+example will necessarily be unique. Our state space encompasses six dimensions, corresponding to the relative x, y, and z coordinates of each hand involved.
+Our system has a priori knowledge of a partially overlapping set of ASL gestures, having been giving limited training for each known gesture.
 
-The domain in which we test our system is American Sign Language (ASL).
-American sign language is chosen as a domain in which to test our scheme
-because each motion involves six degrees of freedom -- the x, y, and z
-coordinates of each hand relative to the agent's head -- which creates a
-state space sufficiently large enough to preclude achieving real-time
-optimality via na\"ive brute force methods.  The
-robotic system has a priori knowledge of a set of ASL gestures and the
-corresponding Q-Table.
+Here are citations about ASL gesture recognition... include short description of why this is interesting by referencing these papers:
+\cite{HandGestures}\cite{HSMMRecognition}\cite{POMDPGesture}
+\cite{HoughASL}\cite{ASLRealTime}\cite{MotionASL}
 
-Gesture recognition is not a novel concept.  Something about gesture recognition
-here...\cite{HandGestures}\cite{HSMMRecognition}\cite{POMDPGesture}.
-Several works have already provided robust gesture recognition systems for
-ASL \cite{HoughASL}\cite{ASLRealTime}\cite{MotionASL}.
+%Gesture recognition is not a novel concept.  Something about gesture recognition
+%here...\cite{HandGestures}\cite{HSMMRecognition}\cite{POMDPGesture}.
+%Several works have already provided robust gesture recognition systems for
+%ASL \cite{HoughASL}\cite{ASLRealTime}\cite{MotionASL}.
 
 \section{Definition of Problem Space}
 \label{sec:pspace}
@@ -137,7 +114,7 @@ ASL \cite{HoughASL}\cite{ASLRealTime}\cite{MotionASL}.
 1. Technically define the problem space being utilized, framed as the same data structure that
    can be leveraged for executing these actions. 
 
-2. Formalize MDP being used, and each skill representation as a QLearner. Use Ng paper as a basis for this. Also include extra metadata
+2. Formalize SMDP being used, and each skill representation as a QLearner. Use Ng paper as a basis for this. Also include extra metadata
    being considered, such as time-to-execute and tolerance variables
 
 3. Define policy in terms of the exploration function being utilized, explain that this function can be swapped
@@ -165,22 +142,22 @@ ASL \cite{HoughASL}\cite{ASLRealTime}\cite{MotionASL}.
 
 	*At the specified sampling rate, poll all sensors to create a state descriptor.
 	*Iterate through all eligible primitive actions:
-		* If transition from previous state to this state is defined and has a positive reward, add to hit_states
-		  otherwise if it isn't and the sliding window, of size = antipicated_duration * tolerance * sampling_rate, contains less
-		  than X percent hit_states, we time-out the primitive as an optimization step, resetting its sliding window size to 0.
+		* If transition from previous state to this state is defined and has a positive reward, add to hit states
+		  otherwise if it isn't and the sliding window, of size = antipicated duration * tolerance * sampling rate, contains less
+		  than X percent hit states, we time-out the primitive as an optimization step, resetting its sliding window size to 0.
 		* If the current state is within an e-neighborhood of an explicitly trained goal state (don't use intuited goal states,
 		  otherwise the goal area will creep outwards):
-			* For each hit_state:
-				* With probability p, designate current hit_state as a waypoint. Add a waypoint policy that heavily favors
+			* For each hit state:
+				* With probability p, designate current hit state as a waypoint. Add a waypoint policy that heavily favors
 				  transitions to this state from all other eligible states.
-			* Compute A, the percentage of hit_states within the window.
-			* Beginning with the first hit_state, compute B: the expected mean transition reward from following the waypoint policy through to a goal state. Known as the "realistic path".
-			* Beginning with the first hit_state, compute C: the expected mean transition reward from following an optimal policy through to a goal state. Known as the "optimistic path".
+			* Compute A, the percentage of hit states within the window.
+			* Beginning with the first hit state, compute B: the expected mean transition reward from following the waypoint policy through to a goal state. Known as the "realistic path".
+			* Beginning with the first hit state, compute C: the expected mean transition reward from following an optimal policy through to a goal state. Known as the "optimistic path".
 			* Compute D, the duration elapsed when traversing the realistic path, assuming a consistent sampling rate
 			* Compute E, the expected duration of an ideal example of skill execution
 			* Compute F, the mean transition reward for following an optimal policy through the state space fitting the duration requirements.
 
-			* Compute the confidence score: 0.25A + 0.4B/C + 0.1D/E + 0.25B/F
+			* Compute the confidence score: $0.25A + 0.4B/C + 0.1D/E + 0.25B/F$
 			* Apply a <score,label> tuple to each frame of data within the sliding window.
 
 
@@ -199,18 +176,41 @@ In this section we discuss our experimental results.
 
 \section{Related and Future Work}
 \label{sec:future}
-	* Explain garbage collection to manage state space
-	* Adding human feedback layer
+It is important to differentiate our contribution from that of
+existing research in \textit{learning from demonstration}.  Much previous research within reinforcement learning has focused on using examples to
+transfer a policy representing some basic skill from teacher to
+pupil \cite{JenkinsLFD,LFDSurvey}.  Our algorithm focuses on the use of
+\textit{existing knowledge} to generate an approximate decomposition of
+complex scene data while simultaneously using our classifications and observation to continue to shape actionable policies.
+
+
+While work partially overlapping our goals has been published previously \cite{LearningBehaviorFusion}, 
+our work differs substantially in terms of both our algorithm and the resulting simultaneous benefit to
+observation classification and action execution. The problem of hierarchy assignment is left for other
+methods to more fully explore.
+
+The concept of "inverse reinforcement learning" is not a novel one, 
+as others \cite{InverseRL} have used inverse reinforcement learning
+to generate reasonable policy approximations within the context of learning 
+pre-specified, observed primitives. Our work enhances contributions similar to this both by utilizing
+observations to shape policies used within execution and by allowing for the identification of sub-actions
+without the need to specify them explicitly.\\ 
+\\
+	(Cite Constructing Skill Trees paper as use case for timeline data)\\
+	(Explain garbage collection to manage state space)\\
+	(Adding human feedback layer)\\
 
 \section{Conclusions}
+Re-iterate introduction and abstract here, rehash accomplishment and broader impact of contribution.
+
 \label{sec:conclusions}
-In this section we conclude.
+
 
 \section{Acknowledgements}
 \label{sec:acknowledgements}
 Get grant details from Scaz
 
-\bibliography{report}
 \bibliographystyle{aaai}
+\bibliography{report}
 
 \end{document}attempt 
